--- a/src/composer.json
+++ b/src/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "vlucas/phpdotenv": "^3.3"
+        "vlucas/phpdotenv": "^3.3",
+        "nesbot/carbon": "^2.34"
     }
 }
